# CommentsCleaner

./: .gitignore  Cargo.toml  LICENSE  Makefile  QUICKSTART.md  README.md  RELEASE.md  release.bat  release.ps1  release.sh  release.toml
.github/workflows/: build-release.yml  ci.yml  release.yml
release-0.1.0/: sha256sums.txt
src/: cleaner.rs  language.rs  main.rs  processor.rs
