[package]
name = "comments-cleaner"
version = "0.1.3"
edition = "2021"
authors = ["Hank <hank@hank.host>"]
description = "A command-line tool for cleaning code comments, supporting multiple programming languages"
license = "MIT"

[[bin]]
name = "cclean"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
walkdir = "2.5"
anyhow = "1.0"
colored = "3.0"
